# spotify-nfc

./: Cargo.toml  deploy.sh
src/: main.rs  nfc.rs  spotify.rs
