[package]
name = "spotify-nfc-player"
version = "0.1.0"
edition = "2021"

[dependencies]
pcsc = "2.8.1"
tokio = { version = "1.35.0", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
hyper = { version = "0.14.28", features = ["server"] }
regex = "1.10.2"
base64 = "0.21.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
lazy_static = "1.4.0"
